changed default output path to the users home directory
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@7709 e5c1c795-43da-0310-a71f-fac65c449510